--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "16.8.6",
     "react-redux": "^7.1.3",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "typescript": "3.3.3"
